# cpuid_dump_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
c2clat_rs/: Cargo.toml  c2clat.rs
cclat/: Cargo.toml  cclat.rs
cpuid_dump/: AMD_Ryzen_5_5600G_with_Radeon_Graphics.txt  Cargo.toml  const_cpuid_dump.rs  cpuid_dump.rs  cpuid_dump.txt  load_parse.rs  main.rs  parse.rs  parse_amd.rs  parse_intel.rs  parse_mod.rs  parse_util.rs  raw_cpuid.rs  raw_dump.rs
cpuid_dump/_parse/: parse_amd.rs  parse_intel.rs
cpuid_dump/parse/: const_parse.rs  parse_amd.rs  parse_generic.rs  parse_util.rs
dump/: AMD_Ryzen_5_2600_00800F82h.txt
dump_result/: AMD_Ryzen_5_5600G_with_Radeon_Graphics.txt  AMD_Ryzen_5_5600G_with_Radeon_Graphics_00A50F00.txt  AMD_Ryzen_5_5600G_with_Radeon_Graphics_00A50F00_bin.txt  AMD_Ryzen_5_5600G_with_Radeon_Graphics_bin.txt
lib/: Cargo.toml  README.md  TODO.md  addr_size.rs  addr_size_80_08h.rs  addr_size_80_08h_eax.rs  amd_ext_topo_80_26h.rs  amd_pkg_type.rs  amd_pkg_type_80_01h.rs  amd_proc_topo_80_1eh.rs  amd_size_id_80_08h_ecx.rs  amd_tlb_info.rs  cache_prop.rs  codename_mod.rs  hybrid_info_00_1ah.rs  hybrid_topology.rs  info_01h_ebx.rs  intel_ext_topo.rs  intel_ext_topo_0bh_1fh.rs  intel_tlb_param_00_18h.rs  lib.rs  micro_arch_level.rs  monitor_mwait_00_05h.rs  proc_name.rs  topo_info.rs  util.rs  vendor.rs
lib/codename/: codename.rs  codename_amd.rs  codename_intel.rs  codename_zhaoxin.rs  fms.rs  mod.rs
src/: args.rs  c2c_bench.rs  cache_prop.rs  codename.rs  cpuid_dump.rs  cpuid_macro.rs  feature_detect.rs  lib.rs  load_aida64_log.rs  load_file.rs  main.rs  micro_arch_level.rs  parse_mod.rs  proc_name.rs  raw_cpuid.rs  vendor.rs
src/_codename/: codename_amd.rs  codename_intel.rs
src/codename/: codename.rs  codename_amd.rs  codename_intel.rs
src/parse/: const_feature_str.rs  const_parse.rs  mod.rs  parse_amd.rs  parse_generic.rs  parse_intel.rs  parse_util.rs
stream_bench/: Cargo.toml  stream_bench.rs
