[package]
name = "cpuid_dump"
version = "0.1.0"
edition = "2018"
authors = ["Umio Yasuno <53935716+Umio-Yasuno@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1

[lib]
name = "libcpuid_dump"
path = "lib/lib.rs"

[[bin]]
name = "cpuid_dump"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = {version = "^0.2", default-features = false}

[target.'cfg(windows)'.dependencies.windows]
version = "^0.34.0"
features = [
   "Win32_Foundation",
   "Win32_System_Threading",
]
