[package]
name = "cpuid_dump"
version = "0.1.0"
edition = "2018"
authors = ["Umio Yasuno <53935716+Umio-Yasuno@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpuid_asm"
path = "../src/lib.rs"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2"

[[bin]]
name = "cpuid_dump"
path = "main.rs"
# path = "cpuid_dump.rs"
