[package]
name = "cpuid_dump"
version = "0.1.0"
edition = "2018"
authors = ["Umio Yasuno <53935716+Umio-Yasuno@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cpuid-dump-rs]
path = "../"

#[lib]
#name = "cpuid_asm"
#path = "../src/lib.rs"

[[bin]]
name = "cpuid_dump"
path = "main.rs"
# path = "cpuid_dump.rs"

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "^0.34.0"
features = [
   "Win32_Foundation",
   "Win32_System_Threading",
]
