[package]
name = "libcpuid_dump"
version = "0.1.0"
authors = ["Umio Yasuno <53935716+Umio-Yasuno@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[target.'cfg(unix)'.dependencies]
libc = { version = "^0.2", default-features = false }

[target.'cfg(windows)'.dependencies.windows]
version = "^0.34.0"
features = [
   "Win32_Foundation",
   "Win32_System_Threading",
]
