[package]
name = "stream_bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stream_bench"
path = "stream_bench.rs"

[profile.release]
opt-level = 3
debug = false
lto = false
overflow-checks = false
panic = "unwind"
incremental = true
